Updated cargo capacity strategy